# b1chat

./: .gitignore  CMakeLists.txt  Documentation - B1Chat.docx  README.md  client_doxygen.html  commandlinecommunicator.docx  server_doxygen.html
client/: CMakeLists.txt  Doxyfile  main.cpp
client/docs/html/: annotated.html  classClient-members.html  classClient.html  classClient__inherit__graph.dot  classClient__inherit__graph.md5  classSocket-members.html  classSocket.html  classSocket__coll__graph.dot  classSocket__inherit__graph.md5  classes.html  client_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.md5  inherits.html  socket_8h_source.html
client/docs/html/search/: all_0.js  all_1.js  all_4.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
client/docs/latex/: annotated.tex  classClient.tex  classClient.tex.tmp  classClient__coll__graph.dot  classClient__inherit__graph.md5  classSocket.tex  classSocket__coll__graph.dot  hierarchy.tex  refman.tex
client/include/: client.h  receive.h  socket.h
client/interface/: iclient.h  ipriv.h  isocket.h
client/src/: client.cpp  client.cpp.autosave  main.cpp  receive.cpp  socket.cpp
client/test/: CMakeLists.txt  main.cpp  mocksocket.h
client_test/: CMakeLists.txt  main.cpp
client_test-build/: CMakeCache.txt  Makefile  b1comm  b1comm.cbp  cmake_install.cmake
client_test/include/: client.h  receive.h
client_test/interface/: iclient.h
client_test/src/: client.cpp  receive.cpp
interface/: igroup.h
prepare_desktop/: config
server/: CMakeLists.txt  Doxyfile  main.cpp
server/docs/html/: annotated.html  classGroup-members.html  classGroup.html  classGroup__coll__graph.md5  classGroup__inherit__graph.dot  classLogin-members.html  classLogin.html  classLogin__coll__graph.md5  classLogin__inherit__graph.dot  classPriv-members.html  classPriv.html  classPriv__coll__graph.dot  classPriv__inherit__graph.md5  classServer-members.html  classServer.html  classServer__coll__graph.dot  classServer__inherit__graph.md5  classSockeet.html  classSocket-members.html  classSocket.html  classUser-members.html  classUser.html  classUser__coll__graph.dot  classUser__inherit__graph.md5  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  group_8h_source.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.md5  inherit_graph_2.dot  inherit_graph_2.md5  inherit_graph_3.dot  (+11 more)
server/docs/html/search/: all_0.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js
server/docs/latex/: annotated.tex  classGroup.tex  classGroup.tex.tmp  classGroup__coll__graph.dot  classGroup__coll__graph.md5  classLogin.tex  classLogin__inherit__graph.dot  classLogin__inherit__graph.md5  classPriv.tex  classPriv__coll__graph.dot  classPriv__inherit__graph.md5  classServer.tex  classServer__inherit__graph.dot  classServer__inherit__graph.md5  classSockeet.tex  classSocket.tex  classSocket__inherit__graph.md5  classUser.tex  classUser.tex.tmp  classUser__inherit__graph.dot  classUser__inherit__graph.md5  hierarchy.tex  index.tex  refman.tex
server/include/: group.h  login.h  priv.h  server.h  socket.h  user.h
server/interface/: igroup.h  ilogin.h  ipriv.h  iserver.h  isocket.h  iuser.h
server/src/: group.cpp  login.cpp  main.cpp  priv.cpp  server.cpp  socket.cpp  user.cpp
server/test/: CMakeLists.txt  config.save  main.cpp  mocksocket.h
server/test/include/: login.h  user.h
server/test/interface/: igroup.h  ilogin.h  ipriv.h  iserver.h  iuser.h
server/test/src/: group.cpp  login.cpp  priv.cpp  server.cpp  user.cpp
server_gtest/: CMakeLists.txt  main.cpp  users.data
server_gtest-build/: CMakeCache.txt  Makefile  b1comm.cbp  cmake_install.cmake
server_gtest/include/: group.h  priv.h  server.h
server_gtest/interface/: iserver.h
server_gtest/src/: group.cpp  priv.cpp  server.cpp  server.cpp.mv2763  user.cpp
